webserver/deployment/terraform/loadbalancer.tf
resource "aws_lb" "web" {
  # ALB is required for action type "redirect"
  name            = local.tags.Name
  ip_address_type = "dualstack"
  subnets         = [aws_subnet.public.id, aws_subnet.extra.id]
  security_groups = [aws_security_group.web_server.id]
}

resource "aws_lb_listener" "https" {
  load_balancer_arn = aws_lb.web.arn
  port              = 443
  protocol          = "HTTPS"
  ssl_policy        = "ELBSecurityPolicy-2016-08"
  certificate_arn   = "arn:aws:acm:us-east-2:071907346552:certificate/92f7a3c3-e3f3-45e2-8973-972586456448"
  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.web.arn
  }
}

resource "aws_lb_listener" "http" {
  load_balancer_arn = aws_lb.web.arn
  port              = 80
  protocol          = "HTTP"
  default_action {
    type = "redirect"
    redirect {
      port        = 443
      protocol    = "HTTPS"
      status_code = "HTTP_301"
    }
  }
}

resource "aws_lb_target_group" "web" {
  name     = local.tags.Name
  port     = 80
  protocol = "HTTP"
  vpc_id   = aws_vpc.main.id
}

resource "aws_lb_target_group_attachment" "web" {
  target_group_arn = aws_lb_target_group.web.arn
  target_id        = aws_instance.web.id
}
